--- a/public/404.html
+++ b/public/404.html
@@ -20,7 +20,7 @@
                 <img class="mb-4 img-error" src="../images/error-404-monochrome.svg" />
                 <p class="lead">This requested URL was not found on this server.</p>
                 <a href="/">
-                  <i class="bi bi-arrow-left"></i>
+                  <i class="fa-solid fa-arrow-left"></i>
                   Return to Homepage
                 </a>
               </div>
